# cad-engine

./: .gitignore  BUILD.md  CMakeLists.txt  LISEZ MOI pour lancer  build-windows.ps1  build.sh  command compil cad for windows.odt  command compil windows and push git.odt  setup-and-build.ps1
build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mingw/cad-engine_autogen/: deps  moc_predefs.h
build-mingw/cad-engine_autogen/2VQEWOYVDW/: moc_Viewport3D.cpp  moc_Viewport3D.cpp.d
build-mingw/cad-engine_autogen/JCA2YNWUYB/: moc_ViewCube.cpp  moc_ViewCube.cpp.d
build-mingw/cad-engine_autogen/U4N2I235NK/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
build-mingw/cad-engine_autogen/ZEV6FVVJE4/: moc_DocumentTree.cpp  moc_DocumentTree.cpp.d
cad-engine_V0_8_phase1_3D (1)/: .gitignore  LICENSE  README.md
cad-engine_V0_8_phase1_3D (1)/src/features/operations/: ThreadFeature.cpp
cad-engine_V0_8_phase1_3D (1)/src/features/primitives/: BoxFeature.h
cad-engine_V0_8_phase1_3D (1)/src/features/sketch/: GeometricConstraint.h  SketchFeature.cpp
cad-engine_V0_8_phase1_3D (1)/src/ui/tree/: DocumentTree.cpp
cad-engine_V0_8_phase1_3D (1)/src/ui/viewport/: Viewport3D.cpp
packaging/linux/: build-appimage.sh  cad-engine.desktop
packaging/windows/: installer.nsi
src/: main.cpp
src/core/commands/: AddDimensionCommand.h  AddEntityCommand.h  Command.h  DeleteEntityCommand.h  ModifyDimensionCommand.h
src/core/document/: CADDocument.cpp  CADDocument.h
src/core/parametric/: Feature.cpp  Feature.h
src/features/operations/: Chamfer3DFeature.cpp  Chamfer3DFeature.h  CircularPatternFeature.cpp  CircularPatternFeature.h  ExtrudeFeature.cpp  ExtrudeFeature.h  Fillet3DFeature.cpp  Fillet3DFeature.h  LinearPatternFeature.cpp  LinearPatternFeature.h  LoftFeature.cpp  LoftFeature.h  PushPullFeature.cpp  PushPullFeature.h  RevolveFeature.cpp  RevolveFeature.h  ShellFeature.cpp  ShellFeature.h  SweepFeature.cpp  SweepFeature.h  ThreadFeature.h
src/features/primitives/: BoxFeature.cpp  CylinderFeature.cpp  CylinderFeature.h
src/features/sketch/: BasicConstraints.h  Dimension.cpp  Dimension.h  GeometricConstraint.cpp  Sketch2D.cpp  Sketch2D.h  SketchEntity.cpp  SketchEntity.h  SketchFeature.cpp  SketchFeature.h
src/ui/icons/: IconProvider.h
src/ui/mainwindow/: MainWindow.cpp  MainWindow.h
src/ui/tree/: DocumentTree.cpp  DocumentTree.h
src/ui/viewport/: Viewport3D.cpp  Viewport3D.h  ViewportScaling.h
src/ui/widgets/: ViewCube.cpp  ViewCube.h
tests/: CMakeLists.txt  test_environment.cpp  test_minimal_box.cpp  test_primitives.cpp  test_sketch_foundation.cpp  test_viewport_sketch.cpp
